{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 48,
  "lineage": "ffbb454d-433a-e9e0-75d3-3bd50c33cca1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:060795913786:internet-gateway/igw-0744ebdcf6d3ed258",
            "id": "igw-0744ebdcf6d3ed258",
            "owner_id": "060795913786",
            "tags": {
              "Name": "primary-igw"
            },
            "tags_all": {
              "Name": "primary-igw"
            },
            "vpc_id": "vpc-0a93319e912f9da31"
          },
          "dependencies": [
            "aws_vpc.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "secondary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:060795913786:internet-gateway/igw-01c22ac121b0467c1",
            "id": "igw-01c22ac121b0467c1",
            "owner_id": "060795913786",
            "tags": {
              "Name": "secondary-igw"
            },
            "tags_all": {
              "Name": "secondary-igw"
            },
            "vpc_id": "vpc-049dda87d06e005bd"
          },
          "dependencies": [
            "aws_vpc.secondary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "primary_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0744ebdcf6d3ed258",
            "id": "r-rtb-05e82a2d7dcebd5aa1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05e82a2d7dcebd5aa",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.primary",
            "aws_route_table.primary_public",
            "aws_vpc.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "secondary_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01c22ac121b0467c1",
            "id": "r-rtb-037c3edda5b3879671080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-037c3edda5b387967",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.secondary",
            "aws_route_table.secondary_public",
            "aws_vpc.secondary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "primary_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:060795913786:route-table/rtb-05e82a2d7dcebd5aa",
            "id": "rtb-05e82a2d7dcebd5aa",
            "owner_id": "060795913786",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0744ebdcf6d3ed258",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "primary-public-rt"
            },
            "tags_all": {
              "Name": "primary-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a93319e912f9da31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "secondary_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:060795913786:route-table/rtb-037c3edda5b387967",
            "id": "rtb-037c3edda5b387967",
            "owner_id": "060795913786",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01c22ac121b0467c1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "secondary-public-rt"
            },
            "tags_all": {
              "Name": "secondary-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-049dda87d06e005bd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.secondary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "primary_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b98a4a764096da3",
            "route_table_id": "rtb-05e82a2d7dcebd5aa",
            "subnet_id": "subnet-0a02d2da3b2f7f85f"
          },
          "dependencies": [
            "aws_route_table.primary_public",
            "aws_subnet.primary_public",
            "aws_vpc.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "primary_public_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5d8b52b5947c523",
            "route_table_id": "rtb-05e82a2d7dcebd5aa",
            "subnet_id": "subnet-0a5a45c0c5373f880"
          },
          "dependencies": [
            "aws_route_table.primary_public",
            "aws_subnet.primary_public_az2",
            "aws_vpc.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "secondary_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c01e87e3c2eb823",
            "route_table_id": "rtb-037c3edda5b387967",
            "subnet_id": "subnet-0df67f7d0f72a5a25"
          },
          "dependencies": [
            "aws_route_table.secondary_public",
            "aws_subnet.secondary_public",
            "aws_vpc.secondary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "secondary_public_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf356340b1885956",
            "route_table_id": "rtb-037c3edda5b387967",
            "subnet_id": "subnet-01148dccdf9e255bc"
          },
          "dependencies": [
            "aws_route_table.secondary_public",
            "aws_subnet.secondary_public_az2",
            "aws_vpc.secondary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:060795913786:security-group/sg-0e472ac4c49514959",
            "description": "Allow MySQL access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e472ac4c49514959",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-sg",
            "name_prefix": "",
            "owner_id": "060795913786",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-sg"
            },
            "tags_all": {
              "Name": "rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a93319e912f9da31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "primary_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:060795913786:subnet/subnet-0a02d2da3b2f7f85f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a02d2da3b2f7f85f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "060795913786",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "primary-public-subnet"
            },
            "tags_all": {
              "Name": "primary-public-subnet"
            },
            "vpc_id": "vpc-0a93319e912f9da31"
          },
          "dependencies": [
            "aws_vpc.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "primary_public_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:060795913786:subnet/subnet-0a5a45c0c5373f880",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a5a45c0c5373f880",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "060795913786",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "primary-public-subnet-az2"
            },
            "tags_all": {
              "Name": "primary-public-subnet-az2"
            },
            "vpc_id": "vpc-0a93319e912f9da31"
          },
          "dependencies": [
            "aws_vpc.primary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "secondary_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:060795913786:subnet/subnet-0df67f7d0f72a5a25",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df67f7d0f72a5a25",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "060795913786",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "secondary-public-subnet"
            },
            "tags_all": {
              "Name": "secondary-public-subnet"
            },
            "vpc_id": "vpc-049dda87d06e005bd"
          },
          "dependencies": [
            "aws_vpc.secondary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "secondary_public_az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:060795913786:subnet/subnet-01148dccdf9e255bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01148dccdf9e255bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "060795913786",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "secondary-public-subnet-az2"
            },
            "tags_all": {
              "Name": "secondary-public-subnet-az2"
            },
            "vpc_id": "vpc-049dda87d06e005bd"
          },
          "dependencies": [
            "aws_vpc.secondary"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "primary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].primary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:060795913786:vpc/vpc-0a93319e912f9da31",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0474b0ccfa7a6bbca",
            "default_route_table_id": "rtb-05908e3f90aa2597a",
            "default_security_group_id": "sg-06d2d9e11d14352b0",
            "dhcp_options_id": "dopt-081128cfe4c1c113d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a93319e912f9da31",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05908e3f90aa2597a",
            "owner_id": "060795913786",
            "tags": {
              "Name": "primary-vpc"
            },
            "tags_all": {
              "Name": "primary-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "secondary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:060795913786:vpc/vpc-049dda87d06e005bd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0be8af3212ed6a216",
            "default_route_table_id": "rtb-00b71f0f67691d257",
            "default_security_group_id": "sg-0eb0832676e6a1fd4",
            "dhcp_options_id": "dopt-098d5c5f5362b6b9b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-049dda87d06e005bd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00b71f0f67691d257",
            "owner_id": "060795913786",
            "tags": {
              "Name": "secondary-vpc"
            },
            "tags_all": {
              "Name": "secondary-vpc"
            }
          }
        }
      ]
    }
  ]
}